dropshot/tests/fail/bad_channel21b.stderr
error: channel handlers must have the following signature:
           async fn(
               rqctx: dropshot::RequestContext<MyContext>,
               [query_params: Query<Q>,]
               [path_params: Path<P>,]
               websocket_connection: dropshot::WebsocketConnection,
           ) -> dropshot::WebsocketChannelResult
  --> tests/fail/bad_channel21b.rs:23:1
   |
23 | / async unsafe fn unsafe_endpoint(
24 | |     _rqctx: RequestContext<()>,
25 | |     _param1: Query<QueryParams>,
26 | |     _upgraded: WebsocketConnection,
27 | | ) -> dropshot::WebsocketChannelResult {
   | |_____________________________________^

error: endpoint `unsafe_endpoint` must not be unsafe
  --> tests/fail/bad_channel21b.rs:23:7
   |
23 | async unsafe fn unsafe_endpoint(
   |       ^^^^^^
